fix nav hover issue on ios - add button:hover

--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -42,6 +42,12 @@
   gap: var(--space-md);
 }
 
+@media (hover: hover) {
+  button:hover {
+      background-color: blue;
+  }
+}
+
 @media (max-width: 767px) {
   .logoLink > span:last-child {
     border: 0;
